<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/delete_all_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:text="@string/button_delete_all_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_one_button" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:text="@string/button_cancel_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_all_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="240dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:text="@string/delete_task_message"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/delete_warning"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_one_button"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_marginTop="104dp"
        android:text="@string/button_delete_one_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>