<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createTask">

    <!--Title TextView -->

    <!--DueDate TextView -->

    <!--SwitchButton TextView -->

    <!--CreateButton TextView -->

    <TextView
        android:id="@+id/textDueTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/due_time"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datePickerButton" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/task_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:elevation="4dp"
        android:theme="@style/Theme.TodoList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_to_folders"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/ic_menu_revert"
            android:backgroundTint="@color/white"
            android:onClick="onBackButtonClicked"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="50dp" />

        <!-- this text is just here to give spacing and look nice. hacky, but effective. -->
        <TextView
            android:id="@+id/space_filler"
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/toolbar_text"
            android:layout_width="335dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/create_task_toolbar"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_list_toolbar" />

    <TextView
        android:id="@+id/textDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/due_date"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterTitle" />

    <TextView
        android:id="@+id/textRepeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/repeat_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeButton" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="openDatePicker"
        android:text="JAN 01 2020"
        android:textColor="#546E7A"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDueDate" />

    <Button
        android:id="@+id/timeButton"
        style="?android:spinnerStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:onClick="popTimePicker"
        android:text="@string/due_time_enter_text"
        android:textColor="#546E7A"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDueTime" />

    <Button
        android:id="@+id/createTaskButton"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/teal_200"
        android:onClick="submitData"
        android:text="@string/create_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/enterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/title_enter_text"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLines="1"
        android:minHeight="40dp"
        android:singleLine="true"
        android:textColorHint="#546E7A"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRepeat">

        <RadioButton
            android:id="@+id/repeat_radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:text="@string/repeat_radio_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textRepeat" />

        <RadioButton
            android:id="@+id/repeat_radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/repeat_radio_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_radio_1" />

        <RadioButton
            android:id="@+id/repeat_radio_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/repeat_radio_3"
            app:layout_constraintStart_toEndOf="@+id/repeat_radio_2"
            app:layout_constraintTop_toBottomOf="@+id/repeat_radio_1" />

        <RadioButton
            android:id="@+id/repeat_radio_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/repeat_radio_4"
            app:layout_constraintStart_toEndOf="@+id/repeat_radio_3"
            app:layout_constraintTop_toBottomOf="@+id/repeat_radio_1" />

        <RadioButton
            android:id="@+id/repeat_radio_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/repeat_radio_5"
            app:layout_constraintStart_toEndOf="@+id/repeat_radio_4"
            app:layout_constraintTop_toBottomOf="@+id/repeat_radio_1" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>